<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionFragment"
    android:layout_margin="10dp"
    >

    <ImageView
        android:id="@+id/img_estudiando"
        android:layout_width="258dp"
        android:layout_height="253dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/img_estudiando" />

    <RadioGroup
        android:paddingTop="10dp"
        android:id="@+id/rg_question"
        android:layout_below="@id/img_estudiando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/content"
            android:textAlignment="center"
            android:text="@string/pregunta1" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_radioButton"
            android:text="@string/rta_platon"
            />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_radioButton"
            android:text="@string/rta_galileo"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_radioButton"
            android:text="@string/rta_descartes"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_enviar_rta"
        android:layout_below="@+id/rg_question"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_enviar_pregunta1"/>


</RelativeLayout>